Now i can get Date and Time from user

--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -306,7 +306,7 @@
 
                     <Label Content="Добавление к заказу" HorizontalAlignment="Center" Grid.Row="0" Margin="0 15 0 0" FontWeight="Bold"/>
                     <TextBox Text="" Grid.Row="1" Margin="0 0 0 30" FontWeight="Bold"/>
-                    
+
                     <Label Content="Дата начала брони" HorizontalAlignment="Center" Grid.Row="1" Margin="0 30 0 0"/>
                     <DatePicker Grid.Column="0" Grid.Row="2" Margin="0 10 0 20" AllowDrop="True" SelectedDate="{Binding AddBookingItemToCurrentOrderVM.StartDatePicker}"/>
                     
@@ -314,12 +314,12 @@
                     <TextBox Grid.Row="3" Margin="0 30 0 0" Text="{Binding AddBookingItemToCurrentOrderVM.StartTimePicker}"/>
 
                     <Label Content="Дата окончания брони" HorizontalAlignment="Center" Grid.Row="4" Margin="0 30 0 0"/>
-                    <DatePicker Grid.Column="0" Grid.Row="5" Margin="0 10 0 20" AllowDrop="True" SelectedDate="{Binding AddBookingItemToCurrentOrderVM.EndDatePicker}"/>
+                    <DatePicker Grid.Column="0" Grid.Row="5" Margin="0 10 0 20" Text = "02.02.2022" AllowDrop="True" SelectedDate="{Binding AddBookingItemToCurrentOrderVM.EndDatePicker}"/>
 
                     <Label Content="Время окончания брони" HorizontalAlignment="Center" Grid.Row="6" Margin="0 0 0 0"/>
                     <TextBox Grid.Row="6" Margin="0 30 0 0" Text="{Binding AddBookingItemToCurrentOrderVM.EndTimePicker}"/>
 
-                    <Button x:Name="AddBookingItemButton" IsEnabled="{Binding AddBookingItemToCurrentOrderVM.IsAddButtonAvailable}" Command="{Binding AddBookingItemToCurrentOrderVM.AddToCurrentOrders}"
+                    <Button x:Name="AddBookingItemButton" Command="{Binding AddBookingItemToCurrentOrderVM.AddToCurrentOrders}"
                             Content="Добавить к заказу" Grid.Column="0" Grid.Row="8" Margin="15, 10, 15, 20"/>
                 </Grid>
                 
