start to right datepiker

--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -4,9 +4,21 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:viewmodels="clr-namespace:CoCowork.UI.ViewModels" 
+        
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-        mc:Ignorable="d"
-        Title="Коворк под контролем" Height="600"  Width="1000" Background="#FFB7BBC2">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}">
+  
+        
+        <!--mc:Ignorable="d"
+        Title="Коворк под контролем" Height="600"  Width="1000" Background="#FFB7BBC2">-->
+    
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -25,6 +37,7 @@
         </Grid.ColumnDefinitions>
 
         <Grid x:Name="LeftGrid" Grid.Column ="0" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="15*"/>
                 <ColumnDefinition Width="70*"/>
@@ -432,7 +445,7 @@
                     
                 </DataGrid.Columns>
             </DataGrid>
-            <Grid x:Name="RightCurrentOrderGrid" Grid.Column ="2" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="200" Margin="0,0,-600,0">
+            <Grid x:Name="RightCurrentOrderGrid" Grid.Column ="2" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="200" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="15*"/>
                     <ColumnDefinition Width="70*"/>
