--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:viewmodels="clr-namespace:CoCowork.UI.ViewModels" 
         
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+        xmlns:materialDesign1="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -61,7 +62,7 @@
             <Button x:Name="CurrentOrderButton" Command="{Binding MakeGridVisible}" CommandParameter="{Binding CurrentOrder}" Content="Текущий заказ" Grid.Column="1" Grid.Row="5" Margin="0, 18, 0, 18"/>
         </Grid>
 
-        <Grid x:Name="BookingGrid" Grid.Column ="1" Visibility="{Binding GridVisibility}" DataContext="{Binding Booking}">
+        <Grid x:Name="BookingGrid" Grid.Column ="1" Visibility="Visible" DataContext="{Binding Booking}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="70*"/>
                 <ColumnDefinition Width="25*"/>
@@ -325,19 +326,19 @@
                     </Grid.RowDefinitions>
 
                     <Label Content="Добавление к заказу" HorizontalAlignment="Center" Grid.Row="0" Margin="0 15 0 0" FontWeight="Bold"/>
-                    <TextBox Text="" Grid.Row="1" Margin="0 0 0 30" FontWeight="Bold"/>
 
                     <Label Content="Дата начала брони" HorizontalAlignment="Center" Grid.Row="1" Margin="0 30 0 0"/>
                     <DatePicker Grid.Column="0" Grid.Row="2" Margin="0 10 0 20" AllowDrop="True" SelectedDate="{Binding AddBookingItemToCurrentOrderVM.StartDatePicker}"/>
-                    
                     <Label Content="Время начала брони" HorizontalAlignment="Center" Grid.Row="3" Margin="0 0 0 0"/>
-                    <TextBox Grid.Row="3" Margin="0 30 0 0" Text="{Binding AddBookingItemToCurrentOrderVM.StartTimePicker}"/>
-
+                    
+                    <materialDesign:TimePicker Grid.Row="3" Is24Hours="True" Margin="0 30 0 0" SelectedTimeFormat="Long" Text="{Binding AddBookingItemToCurrentOrderVM.StartTimePicker}"/>
+                    
                     <Label Content="Дата окончания брони" HorizontalAlignment="Center" Grid.Row="4" Margin="0 30 0 0"/>
                     <DatePicker Grid.Column="0" Grid.Row="5" Margin="0 10 0 20" Text = "02.02.2022" AllowDrop="True" SelectedDate="{Binding AddBookingItemToCurrentOrderVM.EndDatePicker}"/>
 
                     <Label Content="Время окончания брони" HorizontalAlignment="Center" Grid.Row="6" Margin="0 0 0 0"/>
-                    <TextBox Grid.Row="6" Margin="0 30 0 0" Text="{Binding AddBookingItemToCurrentOrderVM.EndTimePicker}"/>
+                    <materialDesign:TimePicker Grid.Row="6" Is24Hours="True" Margin="0 30 0 0" SelectedTimeFormat="Long" Text="{Binding AddBookingItemToCurrentOrderVM.EndTimePicker}" />
+
 
                     <Button x:Name="AddBookingItemButton" Command="{Binding AddBookingItemToCurrentOrderVM.AddToCurrentOrders}"
                             Content="Добавить к заказу" Grid.Column="0" Grid.Row="8" Margin="15, 10, 15, 20"/>
