--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -509,7 +509,8 @@
                     <DataGridTextColumn Binding="{Binding Id}" Header=" Номер в базе данных" Width="150"/>
                     <DataGridTextColumn Binding="{Binding Name}" Header=" Имя" Width="150"/>
                     <DataGridTextColumn Binding="{Binding TypeForDisplayInUI}" Header=" Тип" Width="150"/>
-                    <DataGridTextColumn Binding="{Binding SubtotalPrice, StringFormat={}{0:#0.0}}" Header=" Цена" Width="150"/>
+                    <DataGridTextColumn Binding="{Binding SubtotalPrice, StringFormat={}{0:#0.00}}" Header=" Цена" Width="150"/>
+                    <DataGridTextColumn Binding="{Binding Description}" Header=" Описание" Width="150"/>
                     
                 </DataGrid.Columns>
             </DataGrid>
@@ -537,7 +538,7 @@
                 <Label Grid.Column="1" Content="Выберите клиента:" HorizontalAlignment="Left" Margin="0,8,0,0" Grid.Row="3" VerticalAlignment="Top" FontSize="14"/>
                 <CheckBox x:Name="CheckBoxNotFullPaid" Grid.Column="1" Content="Частичная оплата" IsChecked="{Binding CurrentOrder.IsPaid}" HorizontalAlignment="Left" Margin="0,47,0,0" Grid.Row="4" VerticalAlignment="Top" Height="36" Grid.RowSpan="2"/>
                 <TextBlock Grid.Column="1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Общая цена:" VerticalAlignment="Top" FontSize="16" Margin="46,16,0,0"/>
-                <TextBlock Margin="0,44,0,0" TextWrapping="Wrap" Text="{Binding CurrentOrder.TotalPrice}" VerticalAlignment="Bottom" FontSize="14" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right" Width="82" Grid.Column="1" TextAlignment="Right">
+                <TextBlock Margin="0,44,0,0" TextWrapping="Wrap" Text="{Binding CurrentOrder.TotalPrice, StringFormat={}{0:#0.00}}" VerticalAlignment="Bottom" FontSize="14" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right" Width="82" Grid.Column="1" TextAlignment="Right">
                     <TextBlock.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform ScaleX="1"/>
