--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -495,7 +495,7 @@
                 </Grid.RowDefinitions>
 
                 <Button x:Name="AcceptOrder" Content="Оформить заказ" Command="{Binding CurrentOrder.AddOrder}" Grid.Column="1" Grid.Row="5" Margin="0, 15, 0, 15" Height="47"/>
-                <Button x:Name="DeleteOrder" Content="Удалить из заказа" Command="{Binding CurrentOrder.DeleteFromeCurrentOrder}" Grid.Column="1" Grid.Row="5" Margin="0,80,0,-60" Height="47"/>
+                <Button x:Name="DeleteOrder" Content="Удалить из заказа" Command="{Binding CurrentOrder.DeleteOrder}" Grid.Column="1" Grid.Row="5" Margin="0,80,0,-60" Height="47"/>
                 <ComboBox  x:Name="ClientsComboBox" ItemsSource="{Binding CurrentOrder.Clients}" SelectedItem="{Binding CurrentOrder.SelectedClient}" DisplayMemberPath="FullName" HorizontalAlignment="Center" Margin="0,57,0,0" Grid.Row="3" VerticalAlignment="Top" Width="140" Grid.RowSpan="2" Grid.Column="1"/>
                 <Label Grid.Column="1" Content="Выберите клиента:" HorizontalAlignment="Left" Margin="0,8,0,0" Grid.Row="3" VerticalAlignment="Top" FontSize="14"/>
                 <CheckBox x:Name="CheckBoxNotFullPaid" Grid.Column="1" Content="Частичная оплата" IsChecked="{Binding CurrentOrder.IsPaid}" HorizontalAlignment="Left" Margin="0,47,0,0" Grid.Row="4" VerticalAlignment="Top" Height="36" Grid.RowSpan="2"/>
